--- a/backend/config/config.env
+++ b/backend/config/config.env
@@ -1,2 +1,2 @@
 PORT=4000
-DB_URL = "mongodb+srv://admin:admin@cluster0.9pd8s.mongodb.net/myFirstDatabase?retryWrites=true&w=majority"
+DB_URL = "mongodb+srv://admin:admin@cluster0.9pd8s.mongodb.net/myFirstDatabase?retryWrites=true&w=majority&ssl=true"
