--- a/backend/config/config.env
+++ b/backend/config/config.env
@@ -1,5 +1,7 @@
 PORT=4000
-DB_URL = "mongodb+srv://admin:admin@cluster0.9pd8s.mongodb.net/myFirstDatabase?retryWrites=true&w=majority&ssl=true"
+DB_URI = "mongodb+srv://admin:admin@cluster0.9pd8s.mongodb.net/myFirstDatabase?retryWrites=true&w=majority&ssl=true"
 
 JWT_SECRET=JDSLFJDSLJFSADJFLKDFJOISDJFLKDSJFL
 JWT_EXPIRE=5d
+
+COOKIE_EXPIRE=5
